--- a/templates/users/signup.html
+++ b/templates/users/signup.html
@@ -34,6 +34,6 @@
 		<button type="submit" class="btn btn-outline-success btn-block mt-5"><i class="lead">Register!</i></button>	
 	</form>
 		<div class="mx-auto mt-1" style="width: 300px;">
-		<p>Already registered? <a href="{% url "users:login" %}">Sign In</a></p>
+		<p>Already registered? <a href="{% url 'users:login' %}">Sign In</a></p>
 	</div>
 {% endblock container %}
